@@ -538,7 +538,7 @@ ConnectionType=4bit
 # For I2C connections this sets the slave address (usually 0x20).
 Port=0x378
 
-# Device of the serial or I2C interface [default: /dev/lcd]
+# Device of the serial, I2C, or SPI interface [default: /dev/lcd]
 Device=/dev/ttyS0
 
 # Bitrate of the serial port (0 for interface default)
