@@ -1,0 +1,9 @@
+#ifndef HD_SPI_H
+#define HD_SPI_H
+
+#include "lcd.h"		/* for Driver */
+
+/* initialise this particular driver */
+int hd_init_spi(Driver *drvthis);
+
+#endif
