@@ -427,6 +427,13 @@ HD44780_init(Driver *drvthis)
  			 (p->have_output?" out":"")
  			);
  		break;
+ 	  case IF_TYPE_SPI:
+ 		sprintf(buf, "SPI %s%s%s",
+ 			 (p->have_backlight?" bl":""),
+ 			 (p->have_keypad?" key":""),
+ 			 (p->have_output?" out":"")
+ 			);
+ 		break;
  	  case IF_TYPE_TCP:
  		sprintf(buf, "TCP %s%s%s",
  			 (p->have_backlight?" bl":""),
